--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@ This is a first-person game inspired by the popular '96 game Baldi's Basics, thi
 <audio controls>
 <source src="Story Mode Screen Theme.mp3" type="audio/mpeg"/>
 </audio>
+
+<h4>Collect 'Em All</h4>
+<audio controls>
+<source src="story mode jingle (1).mp3" type="audio/mpeg"/>
+</audio>
+
 <hr>
 <a href="1s33y0u.html" class="redirection button"> hi.</a>
 
