--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@ alert('UNDER CONSTRUCTION!');
       window.location.href = '1s33y0u.html'; 
     });
   </script>
- <h4>hey, its neil here, theyre liars</h4>
+ <h4>yes, tell them</h4>
 </body>
 </html>
