--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@ alert('UNDER CONSTRUCTION!');
       window.location.href = '1s33y0u.html'; 
     });
   </script>
- <h4>yes, tell them</h4>
+ <h4>this is just only the beginning of something much bigger than you thought...</h4>
 </body>
 </html>
