--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ alert('UNDER CONSTRUCTION!');
       window.location.href = '1s33y0u.html'; 
     });
   </script>
- <h4>this is just only the beginning of something much bigger than you thought...</h4>
+<h4>im watching you</h4>
+ <img src="i see throught your screen.png" height="470"/>
 </body>
 </html>
